# casefarm_public_fork

./: .gitignore  README.md  config.yaml  pyproject.toml
accounts_manager/utils/: Armoury_Account_Mover.py  Armoury_Region_Checker.py  __init__.py  armoury_redemption_reccomender.py  fua_threshold_calculator.py  pua_updater.py  wallet_balance_updater.py
database/: __init__.py
database/db/: database.db  ingester.db  prices.db  scheduler.db
database/utils/: account_utils.py  farmlabs_api_utils.py  price_utils.py
documentation/: mkdocs.yml
documentation/docs/: Existing_Account_Process.md  New_Account_Process.md  Profit_Taking.md  Upcoming_Packages.md  index.md
documentation/site/: 404.html  Existing_Account_Process.html  New_Account_Process.html  Profit_Taking.html  Upcoming_Packages.html  index.html
manager/: run.bat
manager/clients/: manager_features.md  manager_prototype.md
manager/server/: db_operations.py  listing_operations.py  server.py
manager/webapp/: eslint.config.mjs  next.config.ts  package.json
new_accounts_pipeline/: Giftcard_Buyer.py  Prime_Purchaser.py  Profile_Pic_Changer.py  Steamguard.py  __init__.py  email_code.py  email_code_outlook.py  farmlabs_export.csv  giftcard_redeemer.py  guard_utils.py  new_account_items_adder.py  new_account_set_inventory_public.py  new_accounts_export.py  standard_arb_export.txt
new_accounts_pipeline/cache/: Profile_Pics_Downloader.py  cs2names.txt  item_ids.json  item_ids_maker.py  optimizer.py
new_accounts_pipeline/utils/: __init__.py  new_account_maFile_generator.py  new_account_trade_token_updater.py
notifications/: farm_list_updater.py  refresh_access_token.py  ticktick_token.txt
roadmaps/: Roadmap.md  Roadmap_Packages.md  orchestrator_prototype.md
scheduler/: stage_0.py  stage_1.py  stage_2.py
utils/: Manual_Items_Sender.py  Steam_Items_Lister.py  Trade_Acceptor.py  inventory_value_calculator.py  items_data_updater.py  logger.py  schedule_generator.py  z_commit.py
utils/analytics/: app.py  cashout_calculator.py  log_ingester.py
utils/cache/: data.json
utils/capacity_calculators/: Market_Armory_Capacity_Calculator.py  fever_checker.py  (+3 more)
(+168 files in other folders)
